force-app/main/default/objects/Compliance__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Comment</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>