force-app/main/default/objects/Compliance__c/fields/Compliance_Reason__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Reason__c</fullName>
    <label>Compliance Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliance - FX</fullName>
            </value>
            <value>
                <fullName>Compliance - IRRM</fullName>
            </value>
            <value>
                <fullName>Compliance - Comm</fullName>
            </value>
            <value>
                <fullName>General Comment</fullName>
            </value>
            <value>
                <fullName>Retail or Wholesale</fullName>
            </value>
            <value>
                <fullName>BTLP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>