force-app/main/default/objects/Compliance__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Compliance</relationshipLabel>
    <relationshipName>Compliance</relationshipName>
    <type>Lookup</type>
</CustomField>