force-app/main/default/objects/Compliance__c/fields/Date_Provided__c.field-meta.xml
<CustomField>
    <fullName>Date_Provided__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Provided</label>
    <type>Date</type>
</CustomField>