force-app/main/default/objects/Compliance__c/fields/How_Provided__c.field-meta.xml
<CustomField>
    <fullName>How_Provided__c</fullName>
    <label>How Provided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Handover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>