force-app/main/default/objects/Compliance__c/fields/Provided_To__c.field-meta.xml
<CustomField>
    <fullName>Provided_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Which Contact was the Compliance information provided to?</inlineHelpText>
    <label>Provided To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Compliances</relationshipLabel>
    <relationshipName>Compliances</relationshipName>
    <type>Lookup</type>
</CustomField>